syntax = "proto3";
import "google/protobuf/empty.proto";
package exercise_management;
service ExerciseManager {

  rpc DeleteExercises (DeleteExercisesRequest) returns (DeleteExercisesResponse);
}

message DeleteExercisesRequest {
   string category_detail_id = 1;
}
message DeleteExercisesResponse {
   int32 Status = 1;
}


